adding initial files